<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@drawable/container_box_alternative"
    android:elevation="2dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_history_name_tv"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_history_timestamp_tv"
            android:textColor="@color/main_text_color"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/itemDetailsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/item_history_info_tv"
        android:textColor="@color/main_text_color"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/screen_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemImcTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_history_imc_tv"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemCategoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/item_history_category_tv"
                android:textColor="@color/main_text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemTmbTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_history_tmb_tv"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemIdealTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/item_history_ideal_tv"
                android:textColor="@color/main_text_color"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemMaxTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frequ_ncia_max_160"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemZonaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zonas"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemLeveTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/leve_110"
                android:textColor="@color/main_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/itemQueimaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/queima_130"
                android:textColor="@color/main_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/itemAerobicaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/aerobica_140"
                android:textColor="@color/main_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/itemAnaerobicaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/anaerobica_150"
                android:textColor="@color/main_text_color"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
