<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/container_box"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_max="368dp">

        <TextView
            android:id="@+id/idealTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ideal_title_tv"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idealSubtitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ideal_subtitle_tv"
            android:textColor="@color/main_text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/container_box_alternative"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/idealWeightLabelTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ideal_weight_label"
                android:textColor="@color/main_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idealWeightValueTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ideal_weight_value"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/container_box_alternative"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/idealDiffLabelTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ideal_diff_label"
                android:textColor="@color/main_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idealDiffValueTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/ideal_diff_value"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/idealRecommendationsCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ideal_recommendations_cb"
            android:buttonTint="@color/main_color"
            android:textColor="@color/main_text_color" />

        <LinearLayout
            android:id="@+id/idealRecommendationsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@drawable/container_box_normal_weight"
            android:padding="16dp">

            <TextView
                android:id="@+id/idealRecommendationsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ideal_recommendations_content"
                android:textColor="@color/main_text_color"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/idealReturnBt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/screen_bg"
                android:paddingVertical="12dp"
                android:text="@string/ideal_return_bt"
                android:textColor="@color/main_text_color"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/idealFinishBt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/main_color"
                android:paddingVertical="12dp"
                android:text="@string/ideal_finish_bt"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
