<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/screen_bg">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/container_box"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:translationZ="8dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="768dp">

        <TextView
            android:id="@+id/historyTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_title_tv"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historySubtitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/history_subtitle_tv"
            android:textColor="@color/main_text_color"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/historyReturnBt"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/main_color"
            android:paddingVertical="12dp"
            android:text="@string/history_return_bt"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>